tests/core/snapshots/grpc-batch.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "newsById2": {
        "title": "Note 2"
      },
      "newsById3": {
        "title": "Note 3"
      }
    }
  }
}
