tests/core/snapshots/grpc-batch.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar Int64

scalar Int64Str

scalar JSON

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]!
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

scalar PhoneNumber

type Query {
  news: NewsData!
  newsById(news: NewsInput!): News!
}

scalar UInt32

scalar UInt64

scalar UInt64Str

scalar Url

schema {
  query: Query
}
