tests/core/snapshots/grpc-error.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Date

scalar Email

scalar Empty

scalar JSON

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]!
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

scalar PhoneNumber

type Query {
  news: NewsData!
  newsById(news: NewsInput!): News!
}

scalar Url

schema {
  query: Query
}
