tests/core/snapshots/grpc-json.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "newsById": {
        "id": 2
      }
    }
  }
}
