tests/core/snapshots/grpc-json.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000) @upstream @link(id: "news", src: "news.proto", type: Protobuf) {
  query: Query
}

input NewsInput {
  id: Int
}

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type Query {
  newsById: News! @grpc(url: "http://localhost:50051", body: {id: 2}, method: "news.NewsService.GetNews")
  newsByIdMustache(news: NewsInput!): News!
    @grpc(url: "http://localhost:50051", body: "{{.args.news}}", method: "news.NewsService.GetNews")
  newsByIdMustacheAndJson(news: NewsInput!): News!
    @grpc(url: "http://localhost:50051", body: {id: "{{.args.news.id}}"}, method: "news.NewsService.GetNews")
}
