tests/core/snapshots/grpc-map.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "map__MapService__GetMap": {
        "map": {
          "1": "value"
        }
      }
    }
  }
}
