tests/core/snapshots/grpc-map.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  map__MapService__GetMap(mapRequest: map__MapRequest!): map__MapResponse!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

input map__MapRequest {
  map: JSON!
}

type map__MapResponse {
  map: JSON!
}

schema {
  query: Query
}
